--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "firebase-admin": "^12.5.0",
         "framer-motion": "^11.3.31",
         "next": "14.2.7",
         "react": "^18",
