--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "firebase-admin": "^12.5.0",
         "framer-motion": "^11.3.31",
-        "next": "14.2.7",
+        "next": "^14.2.13",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-scrollbar-hide": "^1.1.7",
