--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@types/react-responsive-masonry": "^2.1.3",
         "firebase-admin": "^12.5.0",
         "framer-motion": "^11.3.31",
         "next": "^14.2.13",
+        "prop-types": "^15.8.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-responsive-masonry": "^2.1.7",
         "tailwind-scrollbar-hide": "^1.1.7",
         "zustand": "^4.5.5"
     },
